- Using negative z -index in mainNAv-menu to troubleshoo IOS overlap issue
:

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -18595,11 +18595,13 @@ input[type="radio"].radio--large + label {
   }
   99% {
     opacity: 1;
+    z-index: 100;
     -moz-transform: translateX(0);
     transform: translateX(0);
   }
   100% {
     opacity: 0;
+    z-index: -1;
     -moz-transform: translateX(-300%);
     transform: translateX(-300%);
   }
@@ -18612,11 +18614,13 @@ input[type="radio"].radio--large + label {
   }
   99% {
     opacity: 1;
+    z-index: 100;
     -webkit-transform: translateX(0);
     transform: translateX(0);
   }
   100% {
     opacity: 0;
+    z-index: -1;
     -webkit-transform: translateX(-300%);
     transform: translateX(-300%);
   }
@@ -18631,6 +18635,7 @@ input[type="radio"].radio--large + label {
   }
   99% {
     opacity: 1;
+    z-index: 100;
     -moz-transform: translateX(0);
     -ms-transform: translateX(0);
     -webkit-transform: translateX(0);
@@ -18638,6 +18643,7 @@ input[type="radio"].radio--large + label {
   }
   100% {
     opacity: 0;
+    z-index: -1;
     -moz-transform: translateX(-300%);
     -ms-transform: translateX(-300%);
     -webkit-transform: translateX(-300%);
@@ -18649,14 +18655,17 @@ input[type="radio"].radio--large + label {
     opacity: 0;
     -moz-transform: translateX(-300%);
     transform: translateX(-300%);
+    z-index: -1;
   }
   1% {
     opacity: 1;
+    z-index: 100;
     -moz-transform: translateX(0);
     transform: translateX(0);
   }
   100% {
     opacity: 1;
+    z-index: 100;
     -moz-transform: translateX(0);
     transform: translateX(0);
   }
@@ -18666,14 +18675,17 @@ input[type="radio"].radio--large + label {
     opacity: 0;
     -webkit-transform: translateX(-300%);
     transform: translateX(-300%);
+    z-index: -1;
   }
   1% {
     opacity: 1;
+    z-index: 100;
     -webkit-transform: translateX(0);
     transform: translateX(0);
   }
   100% {
     opacity: 1;
+    z-index: 100;
     -webkit-transform: translateX(0);
     transform: translateX(0);
   }
@@ -18685,9 +18697,11 @@ input[type="radio"].radio--large + label {
     -ms-transform: translateX(-300%);
     -webkit-transform: translateX(-300%);
     transform: translateX(-300%);
+    z-index: -1;
   }
   1% {
     opacity: 1;
+    z-index: 100;
     -moz-transform: translateX(0);
     -ms-transform: translateX(0);
     -webkit-transform: translateX(0);
@@ -18695,6 +18709,7 @@ input[type="radio"].radio--large + label {
   }
   100% {
     opacity: 1;
+    z-index: 100;
     -moz-transform: translateX(0);
     -ms-transform: translateX(0);
     -webkit-transform: translateX(0);
